--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,6 @@
 @import "scss/styles/completeQuestion";
 @import "scss/styles/trophies";
 @import "scss/styles/passLevel";
-@import "scss/styles/popupTime";
-@import "scss/styles/popupThropies";
+@import "scss/styles/popups";
 @import "scss/styles/ranking";
 @import "scss/styles/winner";
