--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -7,13 +7,37 @@
 	</div>
 	<ion-content class="body body-ranking">
 		<div class="cardAbout">
-			<b>Desarrolladores:</b><br><br>
-			Gloria<br>
-			Sara<br>
-			Ana Lucia<br>
-			Hugo<br>
+			<div class="textsAbout">
+				<b>Desarrolladores</b><br>
+			</div>
+			<br>
+			<div class="textsAbout">
+				Sara Isable Arias<br>
+				Gloria Ximena Flórez<br>
+				Ana Lucia Osorio<br>
+				Hugo Mario Quintana<br>
+			</div>
 
-			<br><br><b>Empresa Prosevid.</b>
+			<br><br>
+			<div class="textsAbout">
+				<b>Empresa Prosevid</b><br>
+			</div>
+			<div class="contanerIcon">
+				<img class="logosAbout" src="img/logos/icon.png">
+			</div>
+			<div class="textsAbout">
+				<b>Misión</b>
+			</div>
+			<br>
+			<p style = 'text-align: center;'>Consolidarnos como empresa multinacional líder en América Latina y ser el proveedor preferido de productos y servicios, manteniendo un excelente nivel de calidad.</p>
+			<br><br>
+			<div class="textsAbout">
+				<b>Universidad Empresarial Alexander Von Humbolt</b>
+			</div>
+			<br>
+			<div class="contanerIcon">
+				<img class="logosAbout" src="img/logos/logo-von.jpg">
+			</div>
 		</div>
 	</ion-content>
 </ion-view>
