--- a/www/css/style.css
+++ b/www/css/style.css
@@ -26,13 +26,24 @@
 
 .cardAbout {
   width: 90%;
-  height: 90%;
+  min-height: 90%;
   margin: 6% auto;
   padding: 20px;
   color: #FFF;
   background: rgba(0, 0, 0, 0.6);
   border-radius: 6px;
-  font-size: 18px; }
+  font-size: 16px; }
+
+.textsAbout {
+  text-align: center; }
+
+.logosAbout {
+  width: 100%;
+  border-radius: 10px; }
+
+.contanerIcon {
+  margin: 0 auto;
+  width: 120px; }
 
 .body {
   background-image: url("../img/background/esteFondo.jpg");
@@ -80,7 +91,7 @@
     float: left;
     padding: 3px 5px 2px 5px;
     height: 28px;
-    width: 81px; }
+    width: 90px; }
     .score .numberLevel .textLevel {
       font-size: 15px !important;
       position: absolute;
@@ -380,9 +391,8 @@
     letter-spacing: 1.0px;
     color: #FFFFFF;
     text-shadow: 0px 0px 25px #545454, 0px 0px 15px #000000; }
-
-.popup-buttons, .popup-head {
-  display: none; }
+  .popupTime .popup-head {
+    display: none; }
 
 .popupThropies {
   background: rgba(0, 0, 0, 0.79); }
@@ -401,6 +411,26 @@
     letter-spacing: 1.2px;
     color: #F2F2F3;
     text-shadow: 0px 0px 25px #545454, 0px 0px 15px #000000; }
+  .popupThropies .popup-head {
+    display: none; }
+
+.noConnectionPopUp {
+  background: rgba(0, 0, 0, 0.5); }
+  .noConnectionPopUp .popup {
+    border-radius: 8px; }
+  .noConnectionPopUp .popup-head {
+    background: #6AB9BA;
+    border-radius: 8px 8px 0 0; }
+    .noConnectionPopUp .popup-head h3 {
+      font-size: 18px;
+      font-family: "Roboto-Black"; }
+  .noConnectionPopUp .popup-body {
+    font-family: "Roboto";
+    font-size: 16px;
+    text-align: center; }
+
+.popup-buttons {
+  display: none; }
 
 .body-ranking {
   top: 42px; }
