Finals changes and publish app

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -8,7 +8,20 @@
 	<ion-content class="body body-ranking">
 		<div class="cardAbout">
 			<div class="textsAbout">
-				<b>Desarrolladores</b><br>
+				<b>Prosevid</b><br>
+				<em style="font-style: italic">"Tu bienestar es nuestro mejor regalo."</em>
+			</div>
+			<div class="contanerIcon">
+				<img class="logosAbout" src="img/logos/icon.png">
+			</div>
+			<div class="textsAbout">
+				<b>Misión</b>
+			</div>
+			<br>
+			<p style = 'text-align: justify;'>Somos una empresa Quindiana promotora de respuestas oportunas ante situaciones de Emergencias y Desastres que pongan en riesgo la vida de la comunidad, por medio de la implementación de Planes en las instituciones educativas de la región, con el fin de contribuir al fortalecimiento del programa de prevención de riesgos como exigencia del Ministerio de Educación Nacional.</p>
+			<br><br>
+			<div class="textsAbout">
+				<b>Integrantes</b><br>
 			</div>
 			<br>
 			<div class="textsAbout">
@@ -20,19 +33,7 @@
 
 			<br><br>
 			<div class="textsAbout">
-				<b>Empresa Prosevid</b><br>
-			</div>
-			<div class="contanerIcon">
-				<img class="logosAbout" src="img/logos/icon.png">
-			</div>
-			<div class="textsAbout">
-				<b>Misión</b>
-			</div>
-			<br>
-			<p style = 'text-align: center;'>Consolidarnos como empresa multinacional líder en América Latina y ser el proveedor preferido de productos y servicios, manteniendo un excelente nivel de calidad.</p>
-			<br><br>
-			<div class="textsAbout">
-				<b>Universidad Empresarial Alexander Von Humbolt</b>
+				<b>Corporación Universitaria Empresarial Alexander Von Humbolt</b>
 			</div>
 			<br>
 			<div class="contanerIcon">
