Fixed session questions in questionsController.js

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -9,7 +9,7 @@
 		<div class="cardAbout">
 			<div class="textsAbout">
 				<b>Prosevid</b><br>
-				<em style="font-style: italic">"Tu bienestar es nuestro mejor regalo."</em>
+				<em style="font-style: italic">"Tu cuidado es nuestro mejor regalo."</em>
 			</div>
 			<div class="contanerIcon">
 				<img class="logosAbout" src="img/logos/icon.png">
